# boilerplate-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/add-model/: SKILL.md
.claude/skills/boilerplate-fastapi/: SKILL.md
.claude/skills/performance-check/: SKILL.md
.claude/skills/security-check/: SKILL.md
.claude/skills/vulnerability-scan/: SKILL.md
.github/workflows/: lint.yml  test.yml
alembic/: env.py
app/: dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  users.py
app/auth/providers/: base.py  jwt_provider.py  login_password_provider.py
app/core/: config.py  handlers.py  logger.py  middlewares.py
app/core/exceptions/: business.py  conflict.py  forbidden.py  internal_server.py  record_not_found.py  unauthorized.py  validation.py
app/db/: base.py  session.py
app/db/repositories/: base.py  user.py
app/models/: __init__.py  user.py
app/schemas/token/: __init__.py  login_request.py  token.py
app/schemas/user/: __init__.py  base.py  create.py  response.py  update.py
app/utils/: security.py
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  FAQ.md  MIGRATIONS.md  PERFORMANCE.md  SECURITY.md  SETUP.md  TESTING.md  TOOLING.md
tests/: conftest.py
