[project]
name = "boilerplate-fastapi"
version = "1.0.0"
description = "Production-ready FastAPI boilerplate with flexible auth and database options"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    # 共通: パスワードハッシュ化
    "passlib[bcrypt]>=1.7.4",
    # ロギング
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
# 認証方式別の依存関係
jwt = [
    "PyJWT[crypto]>=2.8.0",
]
session = [
    "itsdangerous>=2.1.0",  # セッション署名
]
oauth2 = [
    "authlib>=1.3.0",  # OAuth2クライアント（将来実装）
]

# データベース別の依存関係
postgresql = [
    "asyncpg>=0.29.0",
]
mysql = [
    "aiomysql>=0.2.0",
    "cryptography>=41.0.0",  # MySQLドライバー要件
]
sqlite = [
    "aiosqlite>=0.19.0",
]

# AI連携（オプショナル）
ai = [
    "boto3>=1.34.0",  # AWS Bedrock
]

# 開発用依存関係
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends pattern)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
